# bigxin

./: CMakeLists.txt  README.md  main.cpp  run_stress_test.sh  vcpkg.json
cmake/triplets/: x64-linux-static.cmake
doc/: code_style.md  protocol.md  refactoring.md
include/: database.h  iorunner.h  login.backend.h  message_cache.h  network_manager.h  protocol.h  protocol_handler.h  redis_client.h  server.core.h  server.h  session.h  utility.h
include/database/: auth.h  connection.h  conversation.h  friend.h  group.h  message.h  types.h
src/: CMakeLists.txt  core.cpp  main.cpp  utility.cpp
src/benchmark/: CMakeLists.txt  account_manager.cpp  account_manager.h  benchmark_client.cpp  benchmark_client.h  benchmark_config.h  benchmark_runner.cpp  benchmark_runner.h  data_store.h  main.cpp  register_accounts.cpp  world_message_test.cpp
src/client/: client.cpp  core.cpp
src/client/backend/: login_backend.cpp  message_cache.cpp  network_manager.cpp  protocol_handler.cpp
src/client/cli/: client.cpp  command.cpp  core.cpp  ui.cpp
src/client/gui/: chat_client_proxy.cpp  chat_client_proxy.h  client.cpp
src/client/gui/qml/: App.qml  ChatHeader.qml  ChatPane.qml  ComposerBar.qml  ConversationItem.qml  ConversationList.qml  MessageBubble.qml  MessageList.qml  NavRail.qml  Theme.qml
src/client/qml/: Theme.qml
src/client/qml/Login/: Login.qml  RegisterWindow.qml
src/client/qml/Main/: Main.qml  SearchResultPanel.qml
src/client/qml/Main/ChatArea/: ChatArea.qml  ContactDetailView.qml
src/client/qml/Main/ChatList/: ChatList.qml  ContactListView.qml
src/client/qml/Main/Dialogs/: AddFriendDialog.qml  JoinGroupDialog.qml  MessageContextMenu.qml  MuteMemberDialog.qml  MySpinBox.qml  PlusMenu.qml  ReactionDetailsDialog.qml  SettingsDialog.qml  StartGroupDialog.qml  UserContextMenu.qml
src/client/qml/Main/Sidebar/: Sidebar.qml
src/database/: auth.cpp  connection.cpp  conversation.cpp  conversation_members.sql  conversations.sql  friend.cpp  friend_requests.sql  group.cpp  message.cpp  messages.sql
src/database/sql/: conversation_members.sql  conversation_sequences.sql  conversations.sql  friend_requests.sql  friends.sql  group_join_requests.sql  messages.sql  migration_001_sequence.sql  migration_002_message_reactions.sql  single_conversations.sql  users.sql
src/protocol/: protocol.cpp
src/server/: core.cpp  server.cpp
src/server/redis/: client.cpp
src/server/server/: broadcast.cpp  cache.cpp  push.cpp
src/server/session/: auth.cpp  conversation.cpp  friend.cpp  group.cpp  message.cpp  reaction.cpp
vcpkg_triplets/: x64-linux-ftxui-modules.cmake
website-react/: index.html  package.json
website-react/src/: App.tsx  index.css
website-react/src/components/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Screenshots.tsx
